[RED] added testing for transaction model, repository, and service